  - Increased the minimum radicalization required for "Youth Radicalization" to 20 from the 10 that was there before
  - Stability now has a visible impact on counter terror minimum/maximum radicalization

 Content:
  - NEW FOCUS TREES: Tajikistan
  - Added a new special project "Helicopter Design Experiments"

 Ideological Powers:
  - Modifiers in tooltips now have text icons
  - Communists:
   - 5-Year-Plans are no longer built from pieces, but you choose from a single type of 5-year plan. The modifiers have been increased in return
   - Replaced Incompatible Economy (+50% Foreign Investment Cost) with Hard Labour (+15% Building Worker Requirement)
  - Socialists:
   - Welfare State now gives -15% bonus to health & social spending instead of a PP reduction for law changes
   - Economic Interventionism no longer gives you additional decisions, instead you get a -25% PP and money cost for Internal Investments (+50% Renewable construction speed for greens)
   - Peaceful Diplomacy no longer gives a construction speed buff but instead only the PP buff
  - Liberals:
   - Business Friendly now gives +10% corporate tax instead of just +10% office tax
   - Anti-Military now gives -15% military/dockyard output instead of -25%
  - Autocrats:
   - Good Connections now gives oligarchs +10% resource export income rather than civilian factory income
   - Replaced Unlimited Power (-25% Advisor Cost) with Power Through Strength (+25% Party Popularity Stability Modifier)
   - Paramilitary unit decision for fascists no longer increases unit attrition
  - Monarchists:
   - Replaced Keep It In The Family (-15% corruption and internal faction cost) with Royal Decree (-15% Laws Cost)
  - Fundamentalists:
   - Sharia Law now gives +0.10 Outlook support instead of +0.05
   - Foreign Fighters now gives you +300 weekly manpower rather than a repeatable decision

 Graphics:
  - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag

 Map: