@@ -1185,12 +1185,28 @@ cheat_decision_categories = {
 			}
 			has_country_flag = cheat_decisions_open
 			has_global_flag = game_rule_allow_cheat_decisions
-			has_country_flag = cheat_decisions_open_operatives
 		}
 
 		complete_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision cheat_decisions_max_internal_faction_opinion"
 			set_to_max_internal_faction_opinions = yes
+		}
+	}
+
+	cheat_decisions_european_union_vote_yes_always = {
+		visible = {
+
+			if = {
+				limit = { has_global_flag = game_rule_allow_toggling_cheat_decisions }
+				has_country_flag = enable_all_decisions
+			}
+			has_country_flag = cheat_decisions_open
+			has_global_flag = game_rule_allow_cheat_decisions
+		}
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision cheat_decisions_european_union_vote_yes_always"
+			set_global_flag = EUU_all_nations_vote_yes
 		}
 	}
 }
