@@ -1318,7 +1318,7 @@ Syria_economic_investments = {
 		icon = GFX_decision_economy
 		available = {
 			controls_state = 188
-			num_of_available_civilian_factories > 1
+			num_of_civilian_factories_available_for_projects > 1
 		}
 		visible = {
 			has_completed_focus = SYR_initiate_industrialization
@@ -1373,7 +1373,7 @@ Syria_economic_investments = {
 		}
 		available = {
 			controls_state = 188
-			num_of_available_civilian_factories > 2
+			num_of_civilian_factories_available_for_projects > 2
 			OR = {
 			    has_idea = fast_growth
 				has_idea = economic_boom
@@ -1408,7 +1408,7 @@ Syria_economic_investments = {
 		icon = GFX_decision_economy
 		available = {
 			controls_state = 566
-			num_of_available_civilian_factories > 1
+			num_of_civilian_factories_available_for_projects > 1
 		}
 		visible = {
 			has_completed_focus = SYR_initiate_industrialization
@@ -1475,7 +1475,7 @@ Syria_economic_investments = {
 		}
 		available = {
 			controls_state = 566
-			num_of_available_civilian_factories > 2
+			num_of_civilian_factories_available_for_projects > 2
 			OR = {
 			    has_idea = fast_growth
 				has_idea = economic_boom
@@ -1510,7 +1510,7 @@ Syria_economic_investments = {
 		icon = GFX_decision_economy
 		available = {
 			controls_state = 186
-			num_of_available_civilian_factories > 1
+			num_of_civilian_factories_available_for_projects > 1
 		}
 		visible = {
 			has_completed_focus = SYR_economic_revitalization
@@ -1577,7 +1577,7 @@ Syria_economic_investments = {
 		}
 		available = {
 			controls_state = 186
-			num_of_available_civilian_factories > 2
+			num_of_civilian_factories_available_for_projects > 2
 			OR = {
 			    has_idea = fast_growth
 				has_idea = economic_boom
@@ -1616,7 +1616,7 @@ Syria_economic_investments = {
 				controls_state = 192
 				controls_state = 193
 			}
-			num_of_available_civilian_factories > 0
+			num_of_civilian_factories_available_for_projects > 0
 			has_tech = excavation1
 		}
 		visible = {
@@ -1693,7 +1693,7 @@ Syria_economic_investments = {
 				controls_state = 192
 				controls_state = 193
 			}
-			num_of_available_civilian_factories > 0
+			num_of_civilian_factories_available_for_projects > 0
 			has_tech = excavation2
 		}
 		visible = {
@@ -1770,7 +1770,7 @@ Syria_economic_investments = {
 				controls_state = 192
 				controls_state = 193
 			}
-			num_of_available_civilian_factories > 0
+			num_of_civilian_factories_available_for_projects > 0
 			has_tech = excavation3
 		}
 		visible = {
@@ -1841,7 +1841,7 @@ Syria_economic_investments = {
 		icon = GFX_decision_economy
 		available = {
             controls_state = 193
-			num_of_available_civilian_factories > 0
+			num_of_civilian_factories_available_for_projects > 0
 		}
 		visible = {
 			has_completed_focus = SYR_invest_in_hasakan_cotton
