@@ -1,21 +1,0 @@
-#example_dynamic_modifier = {
-#		icon = "GFX_idea_unknown" # optional, will show up in guis if icon is specified
-#		enable = { always = yes } #optional, the modifier won't apply if not enabled
-#		remove_trigger = { always = no } #optional, will remove the modifier if true
-#
-#		# list of modifiers
-#		fuel_cost = 321
-#		max_fuel = var_max_fuel # will be taken from a variable
-#	}
-
-#Dynamic modifier for GDP/capita
-gdp_per_capita_country_modifiers = {
-	enable = { always = yes }
-	production_speed_buildings_factor = production_speed_buildings_factor_gdp_modifier
-	monthly_population = monthly_population_gdp_modifier
-	research_speed_factor = research_speed_factor_gdp_modifier
-	stability_factor = stability_factor_gdp_modifier
-	education_cost_multiplier_modifier = research_slot_modifier
-	total_workforce_modifier = total_workforce_gdp_c_modifier_var
-	production_speed_fossil_powerplant_factor = fossil_pp_construction_gdp_c_modifier_var
-}
