@@ -56,6 +56,17 @@ productivity_and_employment_modifier = {
 	production_speed_agriculture_district_factor = agriculture_district_output_var
 }
 
+gdp_per_capita_country_modifiers = {
+	enable = { always = yes }
+	production_speed_buildings_factor = production_speed_buildings_factor_gdp_modifier
+	monthly_population = monthly_population_gdp_modifier
+	research_speed_factor = research_speed_factor_gdp_modifier
+	stability_factor = stability_factor_gdp_modifier
+	education_cost_multiplier_modifier = research_slot_modifier
+	total_workforce_modifier = total_workforce_gdp_c_modifier_var
+	production_speed_fossil_powerplant_factor = fossil_pp_construction_gdp_c_modifier_var
+}
+
 # State-Owned Investments
 state_owned_local_renewable_capacity_modifier = {
 	enable = { always = yes }
