@@ -85,6 +85,11 @@ EU_update_AI_general_voting_modifiers = {
 		}
 	}
 
+	if = {
+		limit = { has_global_flag = EUU_all_nations_vote_yes }
+		add_to_temp_variable = { var = EU_AI_focus_modifier_yes_vote value = 250 }
+	}
+
 	# Common Law Section, this is something that can and is repeated so we will be tucking it in here with the general modifiers since that goes at the end.
 	if = {
 		limit = { is_ai = yes }
