@@ -881,6 +881,8 @@
  cheat_decisions_add_5_operative: "Add 5 Operatives"
  cheat_decisions_add_10_operative: "Add 10 Operatives"
  cheat_decisions_max_internal_faction_opinion: "Max Internal Faction Opinion"
+ cheat_decisions_european_union_vote_yes_always: "European Union: AI Always Votes Yes"
+ cheat_decisions_european_union_vote_yes_always_desc: "Cheat decision if you want the AI to always vote yes on laws. This will disable any European Union related achievement."
 
  ###Child Soldiers
  child_soldiers_category: "Child Soldiers"
