@@ -160,15 +160,15 @@
  min_export_text_tooltip_tt: "£traded_goods_texticon Resources to Market: [?ROOT.modifier@min_export|Y%0]\n\nThis value represents the number of resources that are put to market."
 
  total_civilian_factories_amount_tt: "This value represents the total number of §YCivilian Industries§! in our nation."
- total_civilian_factories_amount_tt_delayed: "This building provides the state with industry for the production of civilian goods or construction of new buildings. Can be converted to military industry if needed.\n\nProvides the state with:\nBase Number of Required Workers: §Y345K§!\nBase GDP Output per §YCivilian Industry§!: $§Y20 Billion§!\nBase Energy Consumption: §R-0.4§! GW\n\nGDP/C impact on §YCivilian Industries Workforce§!: [?workers_requirement_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YCivilian Industries Workforce§!: [?modifier@civ_facs_worker_requirement_modifier|-%0]\n\nWorkers Required per §YCivilian Industries§!: [?workers_per_civ_fac_display]K\n"
+ total_civilian_factories_amount_tt_delayed: "This building provides the state with industry for the production of civilian goods or construction of new buildings. Can be converted to military industry if needed.\n\nProvides the state with:\nBase Number of Required Workers: §Y345K§!\nBase GDP Output per §YCivilian Industry§!: $§Y20 Billion§!\nBase Energy Consumption: §R-0.4§! GW\n\nProductivity impact on §YCivilian Industries Workforce§!: [?worker_requirement_productivity_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YCivilian Industries Workforce§!: [?modifier@civ_facs_worker_requirement_modifier|-%0]\n\nWorkers Required per §YCivilian Industries§!: [?workers_per_civ_fac_display]K\n"
  total_military_factories_amount_tt: "This value represents the total number of §YMilitary Industries§! in our nation."
  total_military_factories_amount_tt_delayed: "This building provides the state with industry for the production of new military equipment. Can be converted to civilian industry if needed.\n\nProvides the state with:\nBase Number of Required Workers: §Y25K§!\nBase GDP Output per §YMilitary Industry§!: $§Y1 Billion§!\nBase Energy Consumption: §R-0.4§! GW\n\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YMilitary Factories & Dockyard Workforce§!: [?modifier@mil_facs_worker_requirement_modifier|-%0]\n\nWorkers Required per §YMilitary Industry§!: [?workers_per_mil_fac_display]K\n"
  total_naval_yard_amount_tt: "This value represents the total number of §YNaval Yard§! in our nation."
  total_naval_yard_amount_tt_delayed: "§YNaval Yards§! are representative of a state's ability to produce military vessels of all sorts ranging from §YPatrol Boats§!, §YConvoys§!, §YDestroyers§!, §YCarriers§! and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y25K§!\nBase GDP Output per §YNaval Yard§!: $§Y1 Billion§!\nBase Energy Consumption: §R-0.4§! GW\n\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YMilitary Factories & Dockyard Workforce§!: [?modifier@mil_facs_worker_requirement_modifier|-%0]\n\nWorkers Required per §YNaval Yard§!: [?workers_per_dockyard_display]K\n"
  total_offices_amount_tt: "This value represents the total number of §YOffice Sectors§! in our nation."
- total_offices_amount_tt_delayed: "The §YOffice Sectors§! represents all the other industries of the economy beyond the extraction and heavy industries. These includes financial, customer, information technology, retail services and so much more.\n\nProvides the state with:\nBase Number of Required Workers: §Y630K§!\nBase GDP Output per §YOffice Sector§!: $§Y50 Billion§!\nBase Energy Consumption: §R-0.25§! GW\n\nGDP/C impact on §YOffice Sector Workforce§!: [?workers_requirement_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YOffice Sector Workforce§!: [?modifier@offices_worker_requirement_modifier|-%0]\n\nWorkers Required per §YOffice Sector§!: [?workers_per_office_display]K\n"
+ total_offices_amount_tt_delayed: "The §YOffice Sectors§! represents all the other industries of the economy beyond the extraction and heavy industries. These includes financial, customer, information technology, retail services and so much more.\n\nProvides the state with:\nBase Number of Required Workers: §Y630K§!\nBase GDP Output per §YOffice Sector§!: $§Y50 Billion§!\nBase Energy Consumption: §R-0.25§! GW\n\nProductivity on §YOffice Sector Workforce§!: [?worker_requirement_productivity_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YOffice Sector Workforce§!: [?modifier@offices_worker_requirement_modifier|-%0]\n\nWorkers Required per §YOffice Sector§!: [?workers_per_office_display]K\n"
  total_agriculture_district_amount_tt: "This value represents the total number of §YCommercialized Agriculture Districts§! in our nation."
- total_agriculture_district_amount_tt_delayed: "§YCommercialized Agriculture Districts§! represents a catch-all for all non-subsistence Agriculture within our nation. It includes Agro-Industry, arable land, grain silos, butcherhouses and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y250K§!\nBase GDP Output per §YCommercialized Agriculture District§!: $§Y25 Billion§!\nBase Energy Consumption: §R-0.10§! GW\n§YFuel Gain§! from States: 8\n§YLocal Supplies§!: 1.5%\n\nGDP/C impact on §YCommercialized Agriculture District Workforce§!: [?workers_requirement_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YCommercialized Agriculture Districts Workforce§!: [?modifier@agriculture_district_worker_requirement_modifier|-%0]\n\nWorkers Required per §YCommercialized Agriculture District§!: [?workers_per_agriculture_district_display]K\n"
+ total_agriculture_district_amount_tt_delayed: "§YCommercialized Agriculture Districts§! represents a catch-all for all non-subsistence Agriculture within our nation. It includes Agro-Industry, arable land, grain silos, butcherhouses and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y250K§!\nBase GDP Output per §YCommercialized Agriculture District§!: $§Y25 Billion§!\nBase Energy Consumption: §R-0.10§! GW\n§YFuel Gain§! from States: 8\n§YLocal Supplies§!: 1.5%\n\nProductivity impact on §YCommercialized Agriculture District Workforce§!: [?worker_requirement_productivity_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YWorkforce on All Buildings§!: [?modifier@buildings_worker_requirement_modifier|-%0]\nLaw, Idea and Tech impact on §YCommercialized Agriculture Districts Workforce§!: [?modifier@agriculture_district_worker_requirement_modifier|-%0]\n\nWorkers Required per §YCommercialized Agriculture District§!: [?workers_per_agriculture_district_display]K\n"
 
  # Increase / Decrease Tax Rate Tooltips
  increases_population_tax_tooltip: "This button increases the §YPopulation Tax Rate§! in our nation.\n\n§YPrerequisites:§!\n[tax_button_req]\n\n[allowed_to_adjust_personal_tax_laws]"
