@@ -24,6 +24,7 @@ v1.11.2
  Content:
   - NEW FOCUS TREES: Tajikistan
   - Added a new special project "Helicopter Design Experiments"
+  - Added a cheat decisions for the European Union to force them to always vote yes
 
  Ideological Powers:
   - Modifiers in tooltips now have text icons
